--- a/src/components/contact_us/contact-us.css
+++ b/src/components/contact_us/contact-us.css
@@ -51,34 +51,13 @@
       .contact-form-content .hello-text-box {
         margin-bottom: 3.75rem; } }
 
-.contact-form-wrap .form-group {
-  margin-bottom: 2rem; }
-  @media (min-width: 992px) {
-    .contact-form-wrap .form-group {
-      margin-bottom: 0.5rem; } }
-  .contact-form-wrap .form-group label,
-  .contact-form-wrap .form-group .form-control {
-    font-size: 0.875rem;
-    line-height: 1.375rem; }
-  .contact-form-wrap .form-group label {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    color: #8e8e8e; }
-    .contact-form-wrap .form-group label::before {
-      content: "";
-      position: absolute;
-      left: -0.75rem;
-      top: 0.625rem;
-      width: 0.25rem;
-      height: 0.25rem;
-      background-color: #1270a8;
-      border-radius: 50%; }
-      @media (min-width: 992px) {
-        .contact-form-wrap .form-group label::before {
-          left: -1rem; } }
-  .contact-form-wrap .form-group .form-control {
+.contact-form-wrap {
+  padding: 0 0.75rem; }
+  .contact-form-wrap .form-floating > .form-control,
+  .contact-form-wrap .form-floating > .form-select {
+    height: calc(3.5rem + 2px);
+    line-height: 1.25; }
+  .contact-form-wrap .form-floating > .form-control {
     background-color: transparent;
     border-bottom: 1px solid #283755;
     border-top: none;
@@ -86,32 +65,94 @@
     border-right: none;
     border-radius: unset;
     padding: 0.5rem 0;
-    height: auto;
     color: #fff; }
     @media (min-width: 992px) {
-      .contact-form-wrap .form-group .form-control {
-        font-size: 2.25rem;
+      .contact-form-wrap .form-floating > .form-control {
+        font-size: 2rem;
         line-height: 1.9375rem;
-        border-bottom: 4px solid transparent; } }
-    .contact-form-wrap .form-group .form-control:focus {
+        border-bottom: 4px solid transparent;
+        height: auto; } }
+    .contact-form-wrap .form-floating > .form-control:focus {
       box-shadow: unset;
       border-color: #283755;
       background-color: transparent; }
-    .contact-form-wrap .form-group .form-control:focus + label, .contact-form-wrap .form-group .form-control:valid + label {
-      transition: 0.2s ease-in-out;
-      top: -1rem; }
-
-.form-group.select-field label {
-  position: unset; }
-
-.form-group.select-field .form-select-field {
-  background-color: transparent;
-  border: 1px solid #283755;
-  color: #fff;
-  font-size: 0.875rem;
-  line-height: 1.375rem; }
-  .form-group.select-field .form-select-field:focus {
-    box-shadow: unset; }
+    @media (min-width: 992px) {
+      .contact-form-wrap .form-floating > .form-control.form-select-field {
+        font-size: 1rem;
+        line-height: 1.25;
+        border-bottom: 4px solid #283755; } }
+  .contact-form-wrap .form-floating > label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    padding: 0.25rem 0;
+    pointer-events: none;
+    border: 1px solid transparent;
+    transform-origin: 0 0;
+    transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
+    color: #fff;
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    margin-bottom: 0; }
+    @media (prefers-reduced-motion: reduce) {
+      .contact-form-wrap .form-floating > label > label {
+        transition: none; } }
+    .contact-form-wrap .form-floating > label > .form-control {
+      padding: 1rem 0.75rem; }
+    .contact-form-wrap .form-floating > label::before {
+      content: "";
+      position: absolute;
+      left: -0.75rem;
+      top: 0.75rem;
+      width: 0.25rem;
+      height: 0.25rem;
+      background-color: #1270a8;
+      border-radius: 50%; }
+      @media (min-width: 992px) {
+        .contact-form-wrap .form-floating > label::before {
+          left: -1rem; } }
+  .contact-form-wrap .form-floating.form-select-floating > .form-control ~ label {
+    color: #fff !important; }
+  .contact-form-wrap .form-floating > .form-control::-moz-placeholder {
+    color: transparent; }
+  .contact-form-wrap .form-floating > .form-control::placeholder {
+    color: transparent; }
+  .contact-form-wrap .form-floating > .form-control:not(:-moz-placeholder-shown) {
+    padding-top: 1.625rem;
+    padding-bottom: 0.625rem; }
+  .contact-form-wrap .form-floating > .form-control:focus,
+  .contact-form-wrap .form-floating > .form-control:not(:placeholder-shown) {
+    padding-top: 1.625rem;
+    padding-bottom: 0.625rem; }
+  .contact-form-wrap .form-floating > .form-control:-webkit-autofill {
+    padding-top: 1.625rem;
+    padding-bottom: 0.625rem; }
+  .contact-form-wrap .form-floating > .form-select {
+    padding-top: 1.625rem;
+    padding-bottom: 0.625rem; }
+  .contact-form-wrap .form-floating > .form-control:not(:-moz-placeholder-shown) ~ label {
+    color: #8e8e8e;
+    transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem); }
+    @media (min-width: 992px) {
+      .contact-form-wrap .form-floating > .form-control:not(:-moz-placeholder-shown) ~ label {
+        transform: scale(1) translateY(-0.5rem) translateX(0.15rem); } }
+  .contact-form-wrap .form-floating > .form-control:focus ~ label,
+  .contact-form-wrap .form-floating > .form-control:not(:placeholder-shown) ~ label,
+  .contact-form-wrap .form-floating > .form-select ~ label {
+    color: #8e8e8e;
+    transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem); }
+    @media (min-width: 992px) {
+      .contact-form-wrap .form-floating > .form-control:focus ~ label,
+      .contact-form-wrap .form-floating > .form-control:not(:placeholder-shown) ~ label,
+      .contact-form-wrap .form-floating > .form-select ~ label {
+        transform: scale(1) translateY(-0.5rem) translateX(0.15rem); } }
+  .contact-form-wrap .form-floating > .form-control:-webkit-autofill ~ label {
+    color: #8e8e8e;
+    transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem); }
+    @media (min-width: 992px) {
+      .contact-form-wrap .form-floating > .form-control:-webkit-autofill ~ label {
+        transform: scale(1) translateY(-0.5rem) translateX(0.15rem); } }
 
 @media (min-width: 992px) {
   .contact-details {
