color variable added

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -23,7 +23,8 @@ $assets_url: "../";
 $gray-10: #1a1a1a; // black 90%
 $gray-20: #333333; // black 80%
 $gray-40: #666666;
-$gray-44: #707070; // black 60%
+$gray-44: #707070;
+$gray-56: #8e8e8e; // black 60%
 $gray-60: #999999; // black 40%
 $gray-68: #adadad; // black 32%
 $gray-94: #efefef; // black 6%
