--- a/src/components/about_us/about-us.scss
+++ b/src/components/about_us/about-us.scss
@@ -1,14 +1,86 @@
 @import "../../assets/stylesheets/core";
 
 .about-us-section {
-  padding-top: 5.5rem;
+  padding: 5.5rem 1.25rem 3rem;
 
   @include media-breakpoint-up(lg) {
-    padding-top: 4.5rem;
+    padding: 4.5rem 0 3rem;
   }
 
-  > h2 {
+  h2 {
     font-size: 2.25rem;
     line-height: 2.625rem;
+    color: $gray-11;
+    margin-bottom: 2.5rem;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 3rem;
+      line-height: 3.5rem;
+    }
+  }
+
+  .tag-line-box {
+    border: 0.5rem solid $white;
+    padding: 0.25rem 1rem;
+
+    @include media-breakpoint-up(lg) {
+      max-width: 34.5rem;
+      margin: 0 auto;
+    }
+    span {
+      font-size: 1.125rem;
+      line-height: 1.5rem;
+      color: $gray-11;
+      font-weight: 600;
+      @include media-breakpoint-up(lg) {
+        font-size: 1.375rem;
+        line-height: 2rem;
+      }
+    }
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.375rem;
+    color: $gray-11;
+    margin: 2.5rem 0;
+
+    @include media-breakpoint-up(lg) {
+      margin: 1.5rem 0;
+    }
+  }
+}
+
+.programs-slider-wrapper {
+  .slider-item {
+    padding: 0 1rem;
+
+    @include media-breakpoint-up(lg) {
+      padding: 0 1.5rem;
+    }
+
+    &:first-child {
+      padding-left: 0;
+    }
+
+    h3 {
+      font-size: 1.5rem;
+      line-height: 2.25rem;
+      color: $gray-11;
+    }
+
+    img {
+      width: 11.25rem;
+      height: 11.25rem;
+    }
+
+    p {
+      font-size: 1rem;
+      line-height: 1.25rem;
+
+      @include media-breakpoint-up(lg) {
+        font-size: 0.875rem;
+      }
+    }
   }
 }
