--- a/src/components/about_us/about-us.scss
+++ b/src/components/about_us/about-us.scss
@@ -1,10 +1,17 @@
 @import "../../assets/stylesheets/core";
 
 .about-us-section {
-  padding: 5.5rem 1.25rem 3rem;
+  padding: 5.5rem 0 0;
 
   @include media-breakpoint-up(lg) {
-    padding: 4.5rem 0 3rem;
+    padding: 4.5rem 0 0;
+  }
+
+  .about-us-top-section {
+    padding: 0 1.25rem;
+    @include media-breakpoint-up(lg) {
+      padding: 0;
+    }
   }
 
   h2 {
@@ -43,24 +50,28 @@
     font-size: 1rem;
     line-height: 1.375rem;
     color: $gray-11;
-    margin: 2.5rem 0;
+    margin: 1.5rem 0;
 
     @include media-breakpoint-up(lg) {
-      margin: 1.5rem 0;
+      margin: 2.5rem 0;
     }
   }
 }
 
 .programs-slider-wrapper {
+  margin-bottom: 3rem;
+  .slick-slide {
+    border-right: 1px solid $gray-84;
+
+    &:last-child {
+      border-right: none;
+    }
+  }
   .slider-item {
     padding: 0 1rem;
 
     @include media-breakpoint-up(lg) {
       padding: 0 1.5rem;
-    }
-
-    &:first-child {
-      padding-left: 0;
     }
 
     h3 {
@@ -70,8 +81,13 @@
     }
 
     img {
-      width: 11.25rem;
-      height: 11.25rem;
+      width: 9.75rem;
+      height: 9.75rem;
+
+      @include media-breakpoint-up(lg) {
+        width: 11.25rem;
+        height: 11.25rem;
+      }
     }
 
     p {
@@ -80,6 +96,67 @@
 
       @include media-breakpoint-up(lg) {
         font-size: 0.875rem;
+      }
+    }
+  }
+}
+
+.gallery-slider-wrapper {
+  background-color: $white;
+  padding: 3rem 0 5rem 1.5rem;
+
+  @include media-breakpoint-up(lg) {
+    padding: 3rem 0 5.5rem 5rem;
+  }
+  > h2 {
+    font-size: 2rem;
+    line-height: 2.25rem;
+    color: $gray-11;
+
+    @include media-breakpoint-up(lg) {
+      font-size: 3.125rem;
+      line-height: 3.6875rem;
+      margin: 1.5rem 0 2rem;
+    }
+  }
+
+  .slick-slide {
+    // @include media-breakpoint-up(lg) {
+    //   width: 16.375rem !important;
+    // }
+  }
+
+  .slick-slider {
+    .slick-dots {
+      bottom: -2.8125rem;
+
+      li {
+        button {
+          &::before {
+            font-size: 0.625rem;
+          }
+        }
+
+        &.slick-active {
+          button {
+            &::before {
+              font-size: 1rem;
+              color: $burnt-sienna;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .gallery-item {
+    padding: 0 1rem;
+
+    img {
+      // width: 12.5rem;
+      width: 100%;
+      @include media-breakpoint-up(xl) {
+        // width: 15.625rem;
       }
     }
   }
