about us page ui components

--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -26,7 +26,8 @@ $gray-20: #333333; // black 80%
 $gray-40: #666666;
 $gray-44: #707070; // black 60%
 $gray-60: #999999; // black 40%
-$gray-68: #adadad; // black 32%
+$gray-68: #adadad;
+$gray-84: #d5d5d5; // black 32%
 $gray-94: #efefef; // black 6%
 $gray-95: #f2f2f2; // black 5%
 $gray-96: #f4f4f4;
