--- a/src/components/about_us/about-us.css
+++ b/src/components/about_us/about-us.css
@@ -80,9 +80,12 @@
 .gallery-slider-wrapper {
   background-color: #fff;
   padding: 3rem 0 5rem 1.5rem; }
-  @media (min-width: 992px) {
+  @media (min-width: 768px) {
     .gallery-slider-wrapper {
-      padding: 3rem 0 5.5rem 5rem; } }
+      padding: 3rem 0 5.5rem; } }
+  @media (min-width: 1200px) {
+    .gallery-slider-wrapper {
+      padding: 3rem 5rem 5.5rem; } }
   .gallery-slider-wrapper > h2 {
     font-size: 2rem;
     line-height: 2.25rem;
@@ -99,7 +102,8 @@
     .gallery-slider-wrapper .slick-slider .slick-dots li.slick-active button::before {
       font-size: 1rem;
       color: #e86055; }
-  .gallery-slider-wrapper .gallery-item {
-    padding: 0 1rem; }
-    .gallery-slider-wrapper .gallery-item img {
-      width: 100%; }
+  .gallery-slider-wrapper .gallery-item img {
+    width: 100%; }
+    @media (min-width: 992px) {
+      .gallery-slider-wrapper .gallery-item img {
+        width: 12.5rem; } }
