--- a/src/components/about_us/about-us.scss
+++ b/src/components/about_us/about-us.scss
@@ -105,8 +105,11 @@
   background-color: $white;
   padding: 3rem 0 5rem 1.5rem;
 
-  @include media-breakpoint-up(lg) {
-    padding: 3rem 0 5.5rem 5rem;
+  @include media-breakpoint-up(md) {
+    padding: 3rem 0 5.5rem;
+  }
+  @include media-breakpoint-up(xl) {
+    padding: 3rem 5rem 5.5rem;
   }
   > h2 {
     font-size: 2rem;
@@ -150,13 +153,13 @@
   }
 
   .gallery-item {
-    padding: 0 1rem;
+    // padding: 0 1rem;
 
     img {
       // width: 12.5rem;
       width: 100%;
-      @include media-breakpoint-up(xl) {
-        // width: 15.625rem;
+      @include media-breakpoint-up(lg) {
+        width: 12.5rem;
       }
     }
   }
