innovation page ui added

--- a/src/shared-components/ctaButtonItem/ctaButtonItem.css
+++ b/src/shared-components/ctaButtonItem/ctaButtonItem.css
@@ -15,3 +15,6 @@
 
 .link-item-wrap .link-item > a.-contact-us {
   background: url("../../assets/images/revampImages/contact-us-bg.png"); }
+
+.link-item-wrap .link-item > a.-technology {
+  background: url("../../assets/images/revampImages/technology@2x.png"); }
