--- a/src/shared-components/ctaButtonItem/ctaButtonItem.scss
+++ b/src/shared-components/ctaButtonItem/ctaButtonItem.scss
@@ -20,6 +20,10 @@
       &.-contact-us {
         background: url("../../assets/images/revampImages/contact-us-bg.png");
       }
+
+      &.-technology {
+        background: url("../../assets/images/revampImages/technology@2x.png");
+      }
     }
   }
 }
