--- a/src/assets/stylesheets/_variables.scss
+++ b/src/assets/stylesheets/_variables.scss
@@ -67,6 +67,7 @@ $mortor: #575353;
 $burnt-sienna: #e86055;
 $rhino: #283755;
 $denim: #1270a8;
+$night-blue: #020449;
 
 //$colors: () !default;
 //$colors: map-merge((
