--- a/src/components/team/team.css
+++ b/src/components/team/team.css
@@ -96,11 +96,54 @@
     .leadership-item.founders-col {
       order: unset; } }
 
-.leadership-item:nth-child(even) {
+.leadership-item:nth-child(even) .leadership-item-card {
   flex-direction: row-reverse; }
-  .leadership-item:nth-child(even) .leader-info::before {
-    content: unset; }
+
+.leadership-item:nth-child(even) .leader-info::before {
+  content: unset; }
+
+.leadership-item:nth-child(even) .leader-info::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  top: 0.75rem;
+  right: -0.5625rem;
+  border-top: 0.625rem solid transparent;
+  border-bottom: 0.625rem solid transparent;
+  border-left: 0.625rem solid #697579; }
+
+.leadership-item:nth-child(even) .leader-info.-light-blue::after {
+  border-left: 0.625rem solid #77a9d9; }
+
+@media (min-width: 992px) {
+  .leadership-item:nth-child(even) .leadership-item-card {
+    flex-direction: unset; }
   .leadership-item:nth-child(even) .leader-info::after {
+    content: unset; }
+  .leadership-item:nth-child(even) .leader-info::before {
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 0;
+    top: 0.75rem;
+    left: -0.5625rem;
+    border-top: 0.625rem solid transparent;
+    border-bottom: 0.625rem solid transparent;
+    border-right: 0.625rem solid #697579; }
+  .leadership-item:nth-child(even) .leader-info.-light-blue::before {
+    border-right: 0.625rem solid #77a9d9; } }
+
+.leadership-row.-founders-row .leadership-item-card:last-child {
+  margin-top: 0.5rem; }
+  @media (min-width: 992px) {
+    .leadership-row.-founders-row .leadership-item-card:last-child {
+      margin-top: 0.75rem; } }
+  .leadership-row.-founders-row .leadership-item-card:last-child .leader-info::before {
+    content: unset; }
+  .leadership-row.-founders-row .leadership-item-card:last-child .leader-info::after {
     content: "";
     position: absolute;
     display: block;
@@ -110,41 +153,20 @@
     right: -0.5625rem;
     border-top: 0.625rem solid transparent;
     border-bottom: 0.625rem solid transparent;
-    border-left: 0.625rem solid #697579; }
-  .leadership-item:nth-child(even) .leader-info.-light-blue::after {
-    border-left: 0.625rem solid #77a9d9; }
-  @media (min-width: 992px) {
-    .leadership-item:nth-child(even) {
-      flex-direction: unset; }
-      .leadership-item:nth-child(even) .leader-info::after {
-        content: unset; }
-      .leadership-item:nth-child(even) .leader-info::before {
-        content: "";
-        position: absolute;
-        display: block;
-        width: 0;
-        height: 0;
-        top: 0.75rem;
-        left: -0.5625rem;
-        border-top: 0.625rem solid transparent;
-        border-bottom: 0.625rem solid transparent;
-        border-right: 0.625rem solid #697579; }
-      .leadership-item:nth-child(even) .leader-info.-light-blue::before {
-        border-right: 0.625rem solid #77a9d9; } }
+    border-left: 0.625rem solid #5886b2; }
 
-.leadership-row.-first-row .leadership-item-wrapper {
+.leadership-row.-leaders-row .leadership-item .leadership-item-card {
   height: 12.1875rem; }
   @media (min-width: 992px) {
-    .leadership-row.-first-row .leadership-item-wrapper {
+    .leadership-row.-leaders-row .leadership-item .leadership-item-card {
       height: unset; } }
-  .leadership-row.-first-row .leadership-item-wrapper:last-child {
-    margin-top: 0.5rem; }
-    @media (min-width: 992px) {
-      .leadership-row.-first-row .leadership-item-wrapper:last-child {
-        margin-top: 0.75rem; } }
-    .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::before {
+
+@media (min-width: 992px) {
+  .leadership-row.-leaders-row .leadership-item:nth-child(4n + 3) .leadership-item-card, .leadership-row.-leaders-row .leadership-item:nth-child(4n + 4) .leadership-item-card {
+    flex-direction: row-reverse; }
+    .leadership-row.-leaders-row .leadership-item:nth-child(4n + 3) .leadership-item-card .leader-info::before, .leadership-row.-leaders-row .leadership-item:nth-child(4n + 4) .leadership-item-card .leader-info::before {
       content: unset; }
-    .leadership-row.-first-row .leadership-item-wrapper:last-child .leader-info::after {
+    .leadership-row.-leaders-row .leadership-item:nth-child(4n + 3) .leadership-item-card .leader-info::after, .leadership-row.-leaders-row .leadership-item:nth-child(4n + 4) .leadership-item-card .leader-info::after {
       content: "";
       position: absolute;
       display: block;
@@ -154,33 +176,11 @@
       right: -0.5625rem;
       border-top: 0.625rem solid transparent;
       border-bottom: 0.625rem solid transparent;
-      border-left: 0.625rem solid #5886b2; }
-
-.leadership-row.-second-row .leadership-item {
-  height: 12.1875rem; }
-  @media (min-width: 992px) {
-    .leadership-row.-second-row .leadership-item {
-      height: unset; } }
-  @media (min-width: 992px) {
-    .leadership-row.-second-row .leadership-item:nth-child(4n + 3), .leadership-row.-second-row .leadership-item:nth-child(4n + 4) {
-      flex-direction: row-reverse; }
-      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::before, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::before {
-        content: unset; }
-      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info::after {
-        content: "";
-        position: absolute;
-        display: block;
-        width: 0;
-        height: 0;
-        top: 0.75rem;
-        right: -0.5625rem;
-        border-top: 0.625rem solid transparent;
-        border-bottom: 0.625rem solid transparent;
-        border-left: 0.625rem solid #697579; }
-      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-light-blue::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-light-blue::after {
-        border-left: 0.625rem solid #77a9d9; }
-      .leadership-row.-second-row .leadership-item:nth-child(4n + 3) .leader-info.-dark-grey::after, .leadership-row.-second-row .leadership-item:nth-child(4n + 4) .leader-info.-dark-grey::after {
-        border-left: 0.625rem solid #575353; } }
+      border-left: 0.625rem solid #697579; }
+    .leadership-row.-leaders-row .leadership-item:nth-child(4n + 3) .leadership-item-card .leader-info.-light-blue::after, .leadership-row.-leaders-row .leadership-item:nth-child(4n + 4) .leadership-item-card .leader-info.-light-blue::after {
+      border-left: 0.625rem solid #77a9d9; }
+    .leadership-row.-leaders-row .leadership-item:nth-child(4n + 3) .leadership-item-card .leader-info.-dark-grey::after, .leadership-row.-leaders-row .leadership-item:nth-child(4n + 4) .leadership-item-card .leader-info.-dark-grey::after {
+      border-left: 0.625rem solid #575353; } }
 
 .professional-platforms a {
   background-color: #fff;
