button component css fixes

--- a/src/shared-components/linkButton/linkButton.css
+++ b/src/shared-components/linkButton/linkButton.css
@@ -26,4 +26,5 @@
     border-bottom: none;
     border-right: none;
     box-shadow: none;
-    outline: none; }
+    outline: none;
+    text-decoration: none; }
