--- a/src/components/innovations/innovations.scss
+++ b/src/components/innovations/innovations.scss
@@ -1,9 +1,9 @@
 @import "../../assets/stylesheets/core";
 
 .innovation-details-section {
-  padding: 3.5rem 0;
+  padding: 1.5rem 0 0;
 
   @include media-breakpoint-up(lg) {
-    padding: 6.375rem 0;
+    padding: 3rem 0 0;
   }
 }
