--- a/src/components/contact_us/contact-us.css
+++ b/src/components/contact_us/contact-us.css
@@ -181,11 +181,15 @@
       .contact-card .card-body {
         padding: 1.5rem 2rem; } }
     .contact-card .card-body img {
-      width: 1.75rem;
+      width: 1.25rem;
       height: auto;
       right: 1.75rem;
-      top: -0.75rem;
+      top: 1.25rem;
       z-index: 999; }
+      @media (min-width: 992px) {
+        .contact-card .card-body img {
+          width: 1.5rem;
+          top: 1.375rem; } }
     .contact-card .card-body .ofc-heading,
     .contact-card .card-body h3,
     .contact-card .card-body p {
