--- a/src/components/contact_us/contact-us.scss
+++ b/src/components/contact_us/contact-us.scss
@@ -234,11 +234,15 @@
     }
 
     img {
-      width: 1.75rem;
+      width: 1.25rem;
       height: auto;
       right: 1.75rem;
-      top: -0.75rem;
+      top: 1.25rem;
       z-index: 999;
+      @include media-breakpoint-up(lg) {
+        width: 1.5rem;
+        top: 1.375rem;
+      }
     }
 
     .ofc-heading,
