--- a/src/shared-components/innovationItem/innovationItem.css
+++ b/src/shared-components/innovationItem/innovationItem.css
@@ -17,7 +17,8 @@
     .product-details {
       align-items: center;
       flex-direction: row;
-      padding: 1.5rem 3rem; } }
+      padding: 1.5rem 3rem;
+      margin-bottom: 1rem; } }
   .product-details img {
     width: 18.75rem;
     margin: 0 auto;
@@ -45,12 +46,18 @@
       flex-wrap: unset; } }
   .feature-list li {
     max-width: 100%;
-    flex: 0 0 100%; }
+    flex: 0 0 100%;
+    margin-top: 1rem; }
+    @media (min-width: 768px) {
+      .feature-list li {
+        flex: 0 0 50%;
+        max-width: 50%;
+        padding: 0 0.5rem; } }
     @media (min-width: 992px) {
       .feature-list li {
-        padding: 0 0.5rem;
         max-width: unset;
-        flex: 0 0 25%; } }
+        flex: 0 0 25%;
+        margin-top: 0; } }
     .feature-list li .feature-list-item {
       border-radius: 0.75rem;
       width: 100%;
@@ -64,8 +71,3 @@
         font-size: 0.875rem;
         line-height: 1.375rem;
         color: #020449; }
-    .feature-list li:not(:first-child) {
-      margin-top: 1.5rem; }
-      @media (min-width: 992px) {
-        .feature-list li:not(:first-child) {
-          margin-top: 0; } }
