--- a/src/shared-components/mainBanner/mainBanner.css
+++ b/src/shared-components/mainBanner/mainBanner.css
@@ -15,46 +15,33 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
-}
-@media (min-width: 992px) {
-  .main-banner {
-    height: 15.6875rem;
-    padding: 3rem 0;
-    background-position: center;
-  }
-}
-.main-banner.innovation {
-  background-image: url("../../assets/images/revampImages/innovations-banner@2x.jpeg");
-}
-.main-banner.technology {
-  background-image: url("../../assets/images/revampImages/technology-banner@2x.jpeg");
-}
-.main-banner.industry {
-  background-image: url("../../assets/images/revampImages/industry-banner@2x.jpeg");
-}
-.main-banner.success-story {
-  background-image: url("../../assets/images/revampImages/success-story-banner@2x.jpeg");
-}
-.main-banner p {
-  font-size: 0.75rem;
-  line-height: 0.875rem;
-  color: #fff;
-}
-@media (min-width: 992px) {
+  justify-content: center; }
+  @media (min-width: 992px) {
+    .main-banner {
+      height: 15.6875rem;
+      padding: 3rem 0;
+      background-position: center; } }
+  .main-banner.innovation {
+    background-image: url("../../assets/images/revampImages/innovations-banner@2x.jpeg"); }
+  .main-banner.technology {
+    background-image: url("../../assets/images/revampImages/technology-banner@2x.jpeg"); }
+  .main-banner.industry {
+    background-image: url("../../assets/images/revampImages/industry-banner@2x.jpeg"); }
+  .main-banner.success-story {
+    background-image: url("../../assets/images/revampImages/success-story-banner@2x.jpeg"); }
   .main-banner p {
-    font-size: 1.25rem;
-    line-height: 1.5rem;
-  }
-}
-.main-banner .pagecaption {
-  font-size: 2.375rem;
-  line-height: 2.8125rem;
-  color: #fff;
-}
-@media (min-width: 992px) {
+    font-size: 0.75rem;
+    line-height: 0.875rem;
+    color: #fff; }
+    @media (min-width: 992px) {
+      .main-banner p {
+        font-size: 1.25rem;
+        line-height: 1.5rem; } }
   .main-banner .pagecaption {
-    font-size: 4.6875rem;
-    line-height: 5.5625rem;
-  }
-}
+    font-size: 2.375rem;
+    line-height: 2.8125rem;
+    color: #fff; }
+    @media (min-width: 992px) {
+      .main-banner .pagecaption {
+        font-size: 4.6875rem;
+        line-height: 5.5625rem; } }
